fixed spacing on show page

--- a/public/styles/show.css
+++ b/public/styles/show.css
@@ -40,7 +40,7 @@ body {
 .container {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-evenly;
     width: 100%;
     margin-top: 30px;
 }
